<resources>
    <string name="app_name">Trip Reminder</string>
    <string name="sa" />
    <string name="TripName">Trip Name</string>
    <string name="startPoint">Start Point</string>
    <string name="endPoint">End Point</string>
    <string name="startDetails">Start Details</string>
    <string name="addTrip">Add Trip</string>
    <string name="apiKey">AIzaSyCW_X5xn8RMYkRpAnZt_OEx1UAZgCpOVMM</string>
    <string name="notes">Notes</string>
    <string name="sdfa" />
    <string name="addNote">List Item</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="title_activity_note">NoteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>