<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6DDBE"
    tools:context=".AddTrip">

    <Button
        android:id="@+id/addTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:text="@string/addTrip"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtTime"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/trip"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/startDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/startDetails"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtDate"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/calendar"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/txtTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toEndOf="@+id/calendar"
        app:layout_constraintTop_toTopOf="@+id/calendar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/clock"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <Spinner
        android:id="@+id/trip"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/repeat"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/repeat"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/notes"
        app:layout_constraintEnd_toStartOf="@+id/trip"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/repeat"
        app:layout_constraintEnd_toStartOf="@+id/txtTime"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <!--    <AutoCompleteTextView-->
    <!--        android:id="@+id/endTxt"-->
    <!--        android:layout_width="319dp"-->
    <!--        android:layout_height="54dp"-->
    <!--        android:layout_marginBottom="24dp"-->
    <!--        android:drawableLeft="@drawable/ic_baseline_location_on_24"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/startDetails"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.423"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.fragment.app.FragmentContainerView android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        app:layout_constraintBottom_toTopOf="@+id/startDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/endPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/endPoint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/autocomplete_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <fragment android:id="@+id/place_autocomplete"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/endPoint"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.423"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.fragment.app.FragmentContainerView android:id="@+id/place_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        app:layout_constraintBottom_toTopOf="@+id/endPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tripName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:text="@string/TripName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/startPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startPoint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/place_autocomplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/notes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/nameTxt"
        android:layout_width="259dp"
        android:layout_height="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/startPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>